# streams-benchmark

./: CMakeLists.txt  dependencies.cmake  project_options.cmake
cmake/: lto.cmake  sanitizers.cmake  warnings.cmake
src/: CMakeLists.txt  main.cpp
